<resources>
    <string name="app_name">Local Exchange</string>
    <string name="title_activity_main">Local Exchange</string>
    <string name="supply_toggle_button_text">SUPPLY</string>
    <string name="demand_toggle_button_text">DEMAND</string>
    <string name="login_menu_item">Login</string>
    <string name="logout_menu_name">Logout</string>
    <string name="settings_menu_item">Settings</string>
    <string name="add_menu_item">Add announce</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="sell">Offer</string>
    <string name="buy">Request</string>
    <string name="install_maps_to_get_directions">Install Google Maps on your device to get directions for this announce</string>
    <string name="wrong_price_format">Unexpected price format</string>
    <string name="sms">SMS</string>
    <string name="call">Call</string>
    <string name="info_about_string">Informations about</string>
    <string name="find_alt_text">Find</string>
    <string name="more_alt_text">More options</string>
    <string name="search_something_hint">Search something...</string>
    <string name="in_category_label">In the category</string>
    <string name="insert_number_to_complete_label">Insert your phone number to finish the sign-up procedure</string>
    <string name="confirm">Confirm</string>
    <string name="get_directions_alt_text">Get directions in Google Maps</string>
    <string name="send_mail_alt_text">Send email</string>
    <string name="send_sms_alt_text">Sens SMS</string>
    <string name="add_contact_label">Add contact</string>
    <string name="registered_since_label">Registered since</string>
    <string name="Take_picture_alt_text">Take a picture</string>
    <string name="select_photo_alt_text">Select picture from gallery</string>
    <string name="insert_name_hint">Name</string>
    <string name="insert_price_hint">Price</string>
    <string name="i_offer_button">Offer</string>
    <string name="i_request_button">Request</string>
    <string name="insert_description_hint">Description of the announce</string>
    <string name="select_category_label">Choose category</string>
    <string name="upload_button">Add announce!</string>
</resources>