<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.UploadItemFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/photoImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="-10dp"
                android:adjustViewBounds="true"
                android:maxHeight="350dp"
                tools:ignore="ContentDescription"
                tools:src="@drawable/test_product" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cameraButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Take_picture_alt_text"
                    android:src="@drawable/ic_round_add_a_photo_24"
                    app:backgroundTint="@color/blue_gmaps"
                    app:fabSize="mini"
                    app:tint="?attr/colorSurface" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/galleryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/select_photo_alt_text"
                    android:src="@drawable/ic_baseline_photo_library_24"
                    app:backgroundTint="@color/blue_gmaps"
                    app:fabSize="mini"
                    app:tint="?attr/colorSurface" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <EditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_name_hint"
                    android:inputType="text"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/priceEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_price_hint"
                    android:inputType="numberDecimal"
                    tools:ignore="Autofill" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/typologyButtonGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:checkedButton="@id/supplyButton"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/supplyButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_offer_button"
                        android:theme="@style/ThemeOverlay.SecondaryColorMaterialButton"
                        app:backgroundTint="?attr/colorSurface" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/demandButton"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_request_button"
                        app:backgroundTint="?attr/colorSurface" />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <EditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/insert_description_hint"
                    android:inputType="textMultiLine"
                    tools:ignore="Autofill" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/select_category_label" />

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp" />

                <Button
                    android:id="@+id/uploadItemButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/upload_button" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/uploadingIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone" />

</FrameLayout>